// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Handles Alignment 1`] = `
<body>
  <div>
    <h1
      class="text--left text--display text--black"
      tag="h1"
    >
      left
    </h1>
    <h1
      class="text--center text--display text--black"
      tag="h1"
    >
      center
    </h1>
    <h1
      class="text--right text--display text--black"
      tag="h1"
    >
      right
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Bold 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      <b>
        Bold Display Font
      </b>
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Emphasis 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      <em>
        Emphasis Display Font
      </em>
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Italics 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      <i>
        Italics Display Font
      </i>
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Margin 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black m0"
      tag="h1"
    >
      0
    </h1>
    <h1
      class="text--display text--black ms"
      tag="h1"
    >
      s
    </h1>
    <h1
      class="text--display text--black mm"
      tag="h1"
    >
      m
    </h1>
    <h1
      class="text--display text--black ml"
      tag="h1"
    >
      l
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Strong 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      <strong>
        Strong Display Font
      </strong>
    </h1>
  </div>
</body>
`;

exports[`Typography Handles Tag 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      H1 Tag
    </h1>
    <h2
      class="text--display text--black"
      tag="h2"
    >
      H2 Tag
    </h2>
    <h3
      class="text--display text--black"
      tag="h3"
    >
      H3 Tag
    </h3>
    <h4
      class="text--display text--black"
      tag="h4"
    >
      H4 Tag
    </h4>
    <h5
      class="text--display text--black"
      tag="h5"
    >
      H5 Tag
    </h5>
    <h6
      class="text--display text--black"
      tag="h6"
    >
      H6 Tag
    </h6>
    <p
      class="text--display text--black"
      tag="p"
    >
      P Tag
    </p>
  </div>
</body>
`;

exports[`Typography Handles Transform 1`] = `
<body>
  <div>
    <h1
      class="text--none text--display text--black"
      tag="h1"
    >
      none
    </h1>
    <h1
      class="text--uppercase text--display text--black"
      tag="h1"
    >
      uppercase
    </h1>
    <h1
      class="text--lowercase text--display text--black"
      tag="h1"
    >
      lowercase
    </h1>
    <h1
      class="text--capitalize text--display text--black"
      tag="h1"
    >
      capitalize
    </h1>
  </div>
</body>
`;

exports[`Typography Renders Default 1`] = `
<body>
  <div>
    <h1
      class="text--display text--black"
      tag="h1"
    >
      Display Font
    </h1>
    <h2
      class="text--title text--black"
      tag="h2"
    >
      Title Font
    </h2>
    <h3
      class="text--subtitle text--black"
      tag="h3"
    >
      Subtitle Font
    </h3>
    <h4
      class="text--section-title text--black"
      tag="h4"
    >
      SectionTitle Font
    </h4>
    <h5
      class="text--section-subtitle text--black"
      tag="h5"
    >
      Section Subtitle Font
    </h5>
    <h6
      class="text--subsection-title text--black"
      tag="h6"
    >
      Subsection Title Font
    </h6>
    <p
      class="text--body text--black"
      tag="p"
    >
      Body Font
    </p>
    <p
      class="text--description text--black"
      tag="p"
    >
      Description Font
    </p>
    <label
      class="text--body text--black"
      tag="label"
    >
      Label Font
    </label>
  </div>
</body>
`;
